objects/WT_My_HR_Case_Priority_Automation__mdt.object
<CustomObject>
    <fields>
        <fullName>WT_Action__c</fullName>
        <label>Action</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Priority__c</fullName>
        <label>Priority</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_topic__c</fullName>
        <label>topic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WT My HR Case Priority Automation</label>
    <listViews>
        <fullName>All_Values</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>WT_Action__c</columns>
        <columns>WT_Priority__c</columns>
        <columns>WT_topic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Values</label>
    </listViews>
    <pluralLabel>WT My HR Cases Priority Automation</pluralLabel>
</CustomObject>